# par2

./: .gitignore  CMakeLists.txt  README.md  maingpu.cu
CMakeModules/: FindYamlCpp.cmake
Examples/: .gitignore
Examples/Example01-basic/: example.yaml
Examples/Example02-flopy/: FlopyPar2.ipynb  config.yaml  field-100x100x10.csv
Geometry/: CartesianGrid.cuh  CellField.cuh  CornerField.cuh  FaceField.cuh  Interpolation.cuh  Point.cuh  Vector.cuh
Particles/: MoveParticle.cuh  PParticles.cu  PParticles.cuh
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
Utilities/: Parameters.h
Utilities/spdlog/details/: pattern_formatter_impl.h
Utilities/spdlog/fmt/bundled/: format.h
